--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Matias De lellis <mati86dl@gmail.com>
 Build-Depends: debhelper (>= 9), intltool (>= 0.50), libgtk-3-dev, libpolkit-gobject-1-dev, 
- libpwquality-dev, libaccountsservice-dev, libkrb5-dev, libcheese-dev
+ libpwquality-dev, libaccountsservice-dev, libkrb5-dev, libcheese-gtk-dev
 Standards-Version: 3.9.2
 Vcs-Git: https://github.com/HuayraLinux/pkg-xings-user-accounts
 Vcs-Browser: https://github.com/HuayraLinux/pkg-xings-user-accounts
